2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>

	* ComposedShader.wrl: 

2014-08-22  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-22  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d:
	* index.wrl: 

2014-08-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Clone.wrl:
	* OutlineEditor.x3d: 

2014-08-20  Holger Seelig  <holger.seelig@yahoo.de>

	* ComposedShader.wrl:
	* LocalFog.wrl: 

2014-08-20  Holger Seelig  <holger.seelig@yahoo.de>

	* Fields.wrl: 

2014-08-20  Holger Seelig  <holger.seelig@yahoo.de>

	* Fields.wrl:
	* InlineDragon.x3d: 

2014-08-18  Holger Seelig  <holger.seelig@yahoo.de>

	* MovieTexture.wrl: 

2014-08-18  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-08-18  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineDragon.x3d: 

2014-08-17  Holger Seelig  <holger.seelig@yahoo.de>

	* LOD.wrl: 

2014-08-16  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineDragon2.x3d: 

2014-08-16  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineDragon.x3d:
	* InlineDragon2.x3d: 

2014-08-16  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineDragon.x3d:
	* InlineDragon2.x3d: 

2014-08-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* InlineDragon.x3d:
	* InlineDragon2.x3d:
	* MaterialEditor.x3dv: 

2014-08-14  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-13  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-13  Holger Seelig  <holger.seelig@yahoo.de>

	* GeoCoordinate.x3d: 

2014-08-12  Holger Seelig  <holger.seelig@yahoo.de>

	* GeoCoordinate.x3d: 

2014-08-11  Holger Seelig  <holger.seelig@yahoo.de>

	* OrthoImage.wrl: 

2014-08-11  Holger Seelig  <holger.seelig@yahoo.de>

	* ProximitySensor.wrl: 

2014-08-11  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: