@@ -196,7 +196,7 @@ OutlineTreeViewEditor::select_field_value (const double x, const double y)
 
 				if (field -> getAccessType () not_eq X3D::outputOnly)
 				{
-					getBrowserWindow () -> hasShortcuts (false);
+					getBrowserWindow () -> setAccelerators (false);
 					get_tree_observer () -> unwatch_tree (iter);
 					watch_motion (false);
 					set_cursor (path, *column, true);
@@ -255,7 +255,7 @@ OutlineTreeViewEditor::on_edited (const Glib::ustring & string_path, const Glib:
 
 	get_tree_observer () -> watch_child (iter, path);
 
-	getBrowserWindow () -> hasShortcuts (true);
+	getBrowserWindow () -> setAccelerators (true);
 	watch_motion (true);
 }
 
