@@ -1,3 +1,14 @@
+2014-08-25  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* X3DUserInterface.h:
+	* BrowserWindow.h:
+	* BrowserWindow.cpp:
+	* X3DUserInterface.cpp:
+	* BrowserWindow.xml:
+	* ScriptEditor.cpp:
+	* X3DBrowserWindowInterface.cpp:
+	* OutlineTreeViewEditor.cpp: 
+
 2014-08-24  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* OutlineCellRenderer.cpp: 
